--- a/card-technology.html
+++ b/card-technology.html
@@ -96,7 +96,8 @@
       
 		<div class="row">
          <div class="col-md-4">
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+          <p class="text-muted">Kurz is one of the leading suppliers of security technologies and components for cards. Our expertise revolves around credit, bank, payment, customer, loyalty, prepaid cards, and also ID documents such as identification cards or driving licenses.</p>
+		  <p class="text-muted">Our global presence provides not only international local customer service, but also supply chain security. We uphold identical quality standards worldwide.</p>
          </div>
 	     <div class="col-md-4 portfolio-item no-padding">        
           <img class="img-fluid" src="img/Card/c01.jpg" alt="">
@@ -120,7 +121,14 @@
         <div class="col-md-4">
           <div class="portfolio-caption">
             <h4>Magnetic Foils</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+            <ul>
+			<li>Reliable storage and retrieval of data</li>
+			<li>Magnetic values in accordance with ISO 7811 or customer's specification</li>
+			<li>Simple and fast processability</li>
+			<li>Available in all standard coercivity levels</li>
+			<li>Suitable for all application processes and a varietyof substrates</li>
+			<li>Visual enhancement of the card through specialcolors and designs</li>
+			</ul>
           </div>
         </div>
     </div>
@@ -129,7 +137,13 @@
 	<div class="row">
         <div class="col-md-4 portfolio-item">
 			<h4>Signature Foils</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+            <ul>
+			<li>Easy writing property</li>
+			<li>Secure against counterfeiting and manipulation</li>
+			<li>Good application properties</li>
+			<li>Three layout types: neutral continuous, customer-specific continuous or single image</li>
+			<li>Customized designs for the credit cards such as American Express, China Unionpay, DINERS, JCB, MasterCard, VISA</li>
+		</ul>
         </div>
 	    <div class="col-md-4 portfolio-item no-padding">        
 			<img class="img-fluid" src="img/Card/s01.jpg" alt="">       
@@ -151,7 +165,8 @@
         <div class="col-md-4">
           <div class="portfolio-caption">
             <h4>Holographic OVDs</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+            <p>Easy to communicate, easy to verify, hard to copy.</p>
+			<p class="text-muted">As a leading supplier of security technology our OVD products offer optical security features and a variety of modular systems including interchangeable features.</p>
           </div>
         </div>
     </div>
@@ -161,7 +176,10 @@
 	<div class="row">
         <div class="col-md-4 portfolio-item">
 			<h4>Tipping Foils</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+            <ul>
+			<li>Decoration of the raised lettering on credit cards</li>
+			<li>Available in two types: metallized and pigmented</li>
+			</ul>
         </div>
 	    <div class="col-md-4 portfolio-item no-padding">        
 			<img class="img-fluid" src="img/Card/t01.jpg" alt="">       
@@ -182,8 +200,11 @@
         <div class="col-md-4">
           <div class="portfolio-caption">
             <h4>Cold Indent Foils</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
-          </div>
+            <ul>
+			<li>Application of a personalized number onto signaturepanels or the card surface</li>
+			<li>Serves as a reliable, counterfeit-proof security component</li>
+			</ul>
+		  </div>
         </div>
     </div>
 		
@@ -191,7 +212,14 @@
 	<div class="row">
         <div class="col-md-4 portfolio-item">
 			<h4>Scratch-Off Foils</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+            <ul>
+			<li>Protection of security-relevant data such as passwords, PIN codes etc.</li>
+			<li>Easy to scratch-off</li>
+			<li>High coverage</li>
+			<li>Clean stamping</li>
+			<li>High application speed</li>
+			<li>Standard pattern or customized designs</li>
+			</ul>
         </div>
 	    <div class="col-md-4 portfolio-item no-padding">        
 			<img class="img-fluid" src="img/Card/so01.jpg" alt="">       
@@ -227,7 +255,8 @@
 		<div class="col-md">
           <div class="portfolio-caption">
             <h4>Application Machines</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+            <p class="text-muted">Sophisticated security technology requires a seamless integration of advanced foil technology, matched machine systems and modern application processes.</p>
+			<p class="text-muted">KURZ develops and builds application machines that meet a diverse range of card requirements. Our specialities are machines for the application of magnetic foils, signature panels and holographic images.</p>
           </div>
         </div>
 		</div>
