--- a/high-security.html
+++ b/high-security.html
@@ -107,7 +107,8 @@
 		<div class="col-md-4">
 		  <div class="portfolio-caption">
             <h4>Banknote Security</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+            <p class="text-muted">For 30 years, KURZ is the world's leading provider of banknote security foils and foil technology. Central Banks in more than 80 countries have placed their trust in KURZ to secure their currencies against counterfeiting threats, and enhance the optical attractiveness of their banknotes.</p>
+			<p class="text-muted">The proprietary KINEGRAM optical technology, developed by KURZ subsidiary OVD Kinegram, and our strong innovative capacity are setting the benchmarks for highly sophisticated and successful security features.</p>
           </div>
         </div>
 	</div>
@@ -116,7 +117,8 @@
 	<div class="row-special">
         <div class="col-md-4 portfolio-item no-padding">
             <h4>Government Documents</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+            <p class="text-muted">OVD Kinegram, subsidiary of KURZ in Switzerland and inventor of the KINEGRAM® optical technology for security foils, is the global leader in the supply of high security foil devices to protect government-issued documents, such as passports or ID cards.</p>
+			<p class="text-muted">Champion of the industry for over 30 years, OVD Kinegram's latest innovations focus on the unique integration of digital and physical security technologies as well as smartphone-based digital document verification.</p>
         </div>
 	    <div class="col-md-4 portfolio-item">
           <img class="img-fluid" src="img/HISEC/G01.jpg" alt="">
