--- a/hot-stamping-dies.html
+++ b/hot-stamping-dies.html
@@ -106,13 +106,11 @@
         <div class="col-md-4">
           <div class="portfolio-caption">
             <h4>Dies & Tools</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
-          </div>
-		  <div class="portfolio-caption">
-            <br/>
-			<br/>
+            <p class="text-muted">Modern processes allow high-quality decorations in the packaging industry. Labels, folding carton, book covers, box wraps, greeting cards, and much more are decorated. Our dies are highly precise, impressive and sharp contour stampings, all which inspire the spectator.</p>
+            <p class="text-muted">Our latest development: <strong>NanoEmbossing</strong>, offers the design of new patterns, flows, satin finish, photographic effects and much more.</p>
+		  </div>
+		  <div class="portfolio-caption">     
 			<h4>Accessories</h4>
-			<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. </p>
             <p class="text-muted"> &#8226 &nbsp Adhesive Tapes <br> &#8226 &nbsp Rubber Mats <br> &#8226 &nbsp Make-Ready Materials <br> &#8226 &nbsp Copper Brush <br> &#8226 &nbsp Polishing Paste</p>
           </div>
         </div>
