--- a/textile.html
+++ b/textile.html
@@ -171,7 +171,8 @@
 		<div class="row">
         <div class="col-md-4 portfolio-item">
             <h4>Safety Equipment</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+            <p class="text-muted">Our heat reflective and resistant technical foil could be used as <strong>protection against radiant heat, mechanical and thermal exposure, even to splash of liquid metal.</strong></p>
+			<p class="text-muted">These special technical foils could be applied on <strong>thermal protective gloves, protective and reflective clothing for firefighters and industrial workers exposed to heat.</strong> Not only that it is <strong>recommended for steel cookers, but also for heat protection in the automotive and aircraft industry.</strong></p>
         </div>
 		<div class="col-md-4 portfolio-item">
         <div class="row">
