--- a/hotstamp.html
+++ b/hotstamp.html
@@ -83,7 +83,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase heading-underline">Hot Stamping</h2>
-          <h3 class="section-subheading">The most beautiful of all finishes. Hot stamping foils offers incomparable gloss, unique tactile quality and impressive 3D effects. No other print process comes close in comparison to the performance of hot stamping.</h3>
+          <h3 class="section-subheading">The most beautiful of all finishes. No other print process comes close in comparison to the performance of hot stamping.</h3>
           <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
           Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
           Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
@@ -123,6 +123,7 @@
             <h4>Books, Magazines, Calendars, Namecards</h4>
             <p class="text-muted">Application of hot stamping foil is possible on a wide range of substrates. </p>
 			<p class="text-muted">Even small order and short runs can also be unique, beautiful and cost effective.</p>
+			<p class="text-muted">Hot stamping foils offers incomparable gloss, unique tactile quality and impressive 3D effects.</p>
 		  </div>
         </div>
       </div>
