--- a/brand-enhancement.html
+++ b/brand-enhancement.html
@@ -155,7 +155,7 @@
 			<p class="text-muted">LEONHARD KURZ has developed a fast and simple solution for brand protection and product identification in association with KURZ Digital Solutions: TRUSTCODE®. Select from the latest advanced security features including unique encrypted QR codes and serialization. Additionally, choose from advanced TRUSTSEAL® Protect optical security features.</p>
         </div>
 	    <div class="col-md">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Qy3uKQhsAAw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/Qy3uKQhsAAw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 	</div>
       	  
@@ -173,7 +173,7 @@
 	  <div class="col-md-6">
 	  <div class="video-embed">
 	  <br/>
-	  <video class="video-embed-item" width="" height="" preload="auto" autoplay="autoplay" loop="loop" muted="muted">
+	  <video class="video-embed-item" width="100%" height="" preload="auto" autoplay="autoplay" loop="loop" muted="muted">
 	  <source src="img/BE/K4_NFCscan_650.mp4" type="video/mp4">
 	  </video>
 	  </div>
