--- a/high-security.html
+++ b/high-security.html
@@ -94,8 +94,8 @@
         </div>
       </div>
       
-	<div class="row-special">
-        <div class="col-md-5 portfolio-item">
+	<div class="row">
+        <div class="col-md-5 portfolio-item no-padding">
           <img class="img-fluid" src="img/HISEC/n01.jpg" alt="">
 		  <img class="img-fluid" src="img/HISEC/n03.jpg" alt="">
         </div>
@@ -114,8 +114,8 @@
 	</div>
 	
 	<br/>
-	<div class="row-special">
-        <div class="col-md-4 portfolio-item no-padding">
+	<div class="row">
+        <div class="col-md-4 portfolio-item">
             <h4>Government Documents</h4>
             <p class="text-muted">OVD Kinegram, subsidiary of KURZ in Switzerland and inventor of the KINEGRAM® optical technology for security foils, is the global leader in the supply of high security foil devices to protect government-issued documents, such as passports or ID cards.</p>
 			<p class="text-muted">Champion of the industry for over 30 years, OVD Kinegram's latest innovations focus on the unique integration of digital and physical security technologies as well as smartphone-based digital document verification.</p>
