--- a/plastic.html
+++ b/plastic.html
@@ -252,6 +252,7 @@
 		  <div class="portfolio-caption">
             <h4>Stationary</h4>
             <p class="text-muted">The same concept of hot stamping applied onto stationeries.</p>
+			<p class="text-muted">Writing & measuring instruments, and almost all office supplies could be enhanced with hot stamping!</p>
           </div>
 		  </div>
 	  <div class="col-md-4 portfolio-item no-padding">
