--- a/textile.html
+++ b/textile.html
@@ -168,21 +168,18 @@
           </div>
 		</div>
 	  
-		<div class="row">
+		
+		<div class="row mt-md-5">
         <div class="col-md-4 portfolio-item">
             <h4>Safety Equipment</h4>
             <p class="text-muted">Our heat reflective and resistant technical foil could be used as <strong>protection against radiant heat, mechanical and thermal exposure, even to splash of liquid metal.</strong></p>
 			<p class="text-muted">These special technical foils could be applied on <strong>thermal protective gloves, protective and reflective clothing for firefighters and industrial workers exposed to heat.</strong> Not only that it is <strong>recommended for steel cookers, but also for heat protection in the automotive and aircraft industry.</strong></p>
         </div>
 		<div class="col-md-4 portfolio-item">
-        <div class="row">
-			<img class="img-fluid" src="img/Textile/tx12.jpg" alt="">
-        </div>
+			<img class="img-fluid" src="img/Textile/tx12.jpg" alt="">        
 		</div>
-          <div class="col-md-4 portfolio-item">
-		  <div class="row">
-			<img class="img-fluid" src="img/Textile/tx13.jpg" alt="">
-          </div>
+          <div class="col-md-4 portfolio-item">		  
+			<img class="img-fluid" src="img/Textile/tx13.jpg" alt="">         
 		   </div>                   
         </div>
       </div>
