New Logo, external links

--- a/cftransfer.html
+++ b/cftransfer.html
@@ -131,7 +131,8 @@
 		<li>Metallic half-tone effects</li>
 		<li>Optimal foil-to-print register</li>
 		<li>The substrate structure is retained, e.g. a linen effect texture</li></ul>
-        </div>
+        <h6> For more information: <a href="http://www.coldfoils.com/">http://www.coldfoils.com/</a></h6>
+		</div>
 		</div>
 		
 		<div class="row">
