--- a/digital-metal.html
+++ b/digital-metal.html
@@ -150,9 +150,10 @@
 		 	 <li>Huge variety of colors and metallic shades feasible thanks to overprintability</li>
 			 <li>Almost no limits for creative design</li>
 			 <li>Late stage customization</li>
-			</ul>
+			</ul>			
           </div>
-        </div>
+		  <h6> For more information: <a href="https://www.kurz-graphics.com/en/digital-transfer/">https://www.kurz-graphics.com/en/digital-transfer/</a></h6>
+        </div>		
     </div>
 	
 	</br>
