--- a/hotstamp.html
+++ b/hotstamp.html
@@ -121,9 +121,10 @@
         <div class="col-md">
           <div class="portfolio-caption">
             <h4>Books, Magazines, Calendars, Namecards</h4>
-            <p class="text-muted">Application of hot stamping foil is possible on a wide range of substrates. </p>
-			<p class="text-muted">Even small order and short runs can also be unique, beautiful and cost effective.</p>
+            <p class="text-muted">Application of hot stamping foil is possible on a wide range of substrates. Even small order and short runs can also be unique, beautiful and cost effective.</p>
 			<p class="text-muted">Hot stamping foils offers incomparable gloss, unique tactile quality and impressive 3D effects.</p>
+			<h6> For more information:</h6>
+			<h6><a href="https://www.kurz-graphics.com">https://www.kurz-graphics.com/</a></h6>
 		  </div>
         </div>
       </div>
