--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-heading"><span style="background-color:#fcf8e3">Beauty. Security.</span></div>
-        <div class="intro-heading"><span style="background-color:#fcf8e3">We Do Both.</span></div>
+        <div class="intro-heading"><span style="background-color:#fcf8e3">Beauty.&nbsp&nbsp&nbsp&nbsp&nbsp</span></div>
+        <div class="intro-heading"><span style="background-color:#fcf8e3">Function.&nbsp</span></div>
+		<div class="intro-heading"><span style="background-color:#fcf8e3">Security.&nbsp&nbsp</span></div>
         <p class="h5 intro-subheading"><span style="background-color:#fcf8e3;">Hot Stamping | Cold Foiling | Brand Enhancement</span></p>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#company">Tell Me More</a>
       </div>
